crates/tmark-writers/tests/snapshots/fixtures__diag-table-placement@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{center}
\begin{tabular}{ll}
\toprule
A & B \\
\midrule
1 & 2 \\
\bottomrule
\end{tabular}
\end{center}

---requires---
{
  "packages": [
    "booktabs"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
