crates/tmark-writers/tests/snapshots/fixtures__diag-table-placement@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: 2,
  align: (left, left,),
  table.header([A], [B]),
  [1], [2],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
