crates/tmark-writers/tests/snapshots/fixtures__diag-table-row-width@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: 4,
  align: (left, left, left, left,),
  table.header([A], [B], [C], [D]),
  [x], [1], [2], [],
  [y], [1], [2], [3],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
