crates/tmark-writers/tests/snapshots/fixtures__diag-table-span@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{center}
\begin{tabular}{llll}
\toprule
A & B & C & D \\
\midrule
r1 & \multicolumn{2}{c}{\multirow{2}{*}{Block}} & 3 \\
r2 & \multicolumn{2}{c}{} & c \\
\bottomrule
\end{tabular}
\end{center}

---requires---
{
  "packages": [
    "booktabs",
    "multirow"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
